package cinema.model;

public enum SeatStatus {
    FREE,      // Место свободно
    SOLD,      // Место продано
    RESERVED   // Место забронировано
}
